examples/query_graph/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> querylist
Rule 1     querylist -> aflquery
Rule 2     querylist -> aflquery SEMICOLON
Rule 3     querylist -> aflquery SEMICOLON querylist
Rule 4     querylist -> aqlquery
Rule 5     querylist -> aqlquery SEMICOLON
Rule 6     querylist -> aqlquery SEMICOLON querylist
Rule 7     aqlquery -> aqlcreatearray
Rule 8     aqlquery -> aqldroparray
Rule 9     aqlcreatearray -> CREATE ARRAY NAME arrayspec
Rule 10    aqldroparray -> DROP ARRAY NAME
Rule 11    aflquery -> function
Rule 12    function -> NAME LPAREN RPAREN
Rule 13    function -> NAME LPAREN arguments RPAREN
Rule 14    arguments -> expression
Rule 15    arguments -> expression COMMA arguments
Rule 16    expression -> expression PLUS expression
Rule 17    expression -> expression MINUS expression
Rule 18    expression -> expression TIMES expression
Rule 19    expression -> expression DIVIDE expression
Rule 20    expression -> expression MOD expression
Rule 21    expression -> expression EQUAL expression
Rule 22    expression -> expression LANGLE expression
Rule 23    expression -> expression RANGLE expression
Rule 24    expression -> expression NEQUAL expression
Rule 25    expression -> expression LTEQUAL expression
Rule 26    expression -> expression GTEQUAL expression
Rule 27    expression -> MINUS expression
Rule 28    expression -> LPAREN expression RPAREN
Rule 29    expression -> function
Rule 30    expression -> arrayspec
Rule 31    expression -> arrayref
Rule 32    expression -> objattribute
Rule 33    expression -> NAME
Rule 34    expression -> FLOAT
Rule 35    expression -> INTEGER
Rule 36    expression -> STRING
Rule 37    expression -> expression AS NAME
Rule 38    arrayref -> NAME ATMARK INTEGER
Rule 39    objattribute -> NAME PERIOD NAME
Rule 40    arrayspec -> LANGLE attrlist RANGLE LBRACKET dimlist RBRACKET
Rule 41    attrlist -> attrspec
Rule 42    attrlist -> attrspec COMMA attrlist
Rule 43    attrspec -> NAME COLON itemtype
Rule 44    itemtype -> NAME
Rule 45    itemtype -> NAME NULL
Rule 46    dimlist -> dimspec
Rule 47    dimlist -> dimspec COMMA dimlist
Rule 48    dimspec -> NAME EQUAL INTEGER COLON INTEGER COMMA INTEGER COMMA INTEGER
Rule 49    dimspec -> NAME EQUAL INTEGER COLON TIMES COMMA INTEGER COMMA INTEGER

Terminals, with rules where they appear

ARRAY                : 9 10
AS                   : 37
ATMARK               : 38
COLON                : 43 48 49
COMMA                : 15 42 47 48 48 49 49
CREATE               : 9
DIVIDE               : 19
DROP                 : 10
EQUAL                : 21 48 49
FLOAT                : 34
GTEQUAL              : 26
INTEGER              : 35 38 48 48 48 48 49 49 49
LANGLE               : 22 40
LBRACKET             : 40
LPAREN               : 12 13 28
LTEQUAL              : 25
MINUS                : 17 27
MOD                  : 20
NAME                 : 9 10 12 13 33 37 38 39 39 43 44 45 48 49
NEQUAL               : 24
NULL                 : 45
PERIOD               : 39
PLUS                 : 16
RANGLE               : 23 40
RBRACKET             : 40
RPAREN               : 12 13 28
SEMICOLON            : 2 3 5 6
STRING               : 36
TIMES                : 18 49
error                : 

Nonterminals, with rules where they appear

aflquery             : 1 2 3
aqlcreatearray       : 7
aqldroparray         : 8
aqlquery             : 4 5 6
arguments            : 13 15
arrayref             : 31
arrayspec            : 9 30
attrlist             : 40 42
attrspec             : 41 42
dimlist              : 40 47
dimspec              : 46 47
expression           : 14 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 28 37
function             : 11 29
itemtype             : 43
objattribute         : 32
querylist            : 3 6 0

Parsing method: LALR

state 0

    (0) S' -> . querylist
    (1) querylist -> . aflquery
    (2) querylist -> . aflquery SEMICOLON
    (3) querylist -> . aflquery SEMICOLON querylist
    (4) querylist -> . aqlquery
    (5) querylist -> . aqlquery SEMICOLON
    (6) querylist -> . aqlquery SEMICOLON querylist
    (11) aflquery -> . function
    (7) aqlquery -> . aqlcreatearray
    (8) aqlquery -> . aqldroparray
    (12) function -> . NAME LPAREN RPAREN
    (13) function -> . NAME LPAREN arguments RPAREN
    (9) aqlcreatearray -> . CREATE ARRAY NAME arrayspec
    (10) aqldroparray -> . DROP ARRAY NAME

    NAME            shift and go to state 4
    CREATE          shift and go to state 5
    DROP            shift and go to state 2

    function                       shift and go to state 1
    aqldroparray                   shift and go to state 3
    querylist                      shift and go to state 6
    aqlcreatearray                 shift and go to state 7
    aflquery                       shift and go to state 8
    aqlquery                       shift and go to state 9

state 1

    (11) aflquery -> function .

    SEMICOLON       reduce using rule 11 (aflquery -> function .)
    $end            reduce using rule 11 (aflquery -> function .)


state 2

    (10) aqldroparray -> DROP . ARRAY NAME

    ARRAY           shift and go to state 10


state 3

    (8) aqlquery -> aqldroparray .

    SEMICOLON       reduce using rule 8 (aqlquery -> aqldroparray .)
    $end            reduce using rule 8 (aqlquery -> aqldroparray .)


state 4

    (12) function -> NAME . LPAREN RPAREN
    (13) function -> NAME . LPAREN arguments RPAREN

    LPAREN          shift and go to state 11


state 5

    (9) aqlcreatearray -> CREATE . ARRAY NAME arrayspec

    ARRAY           shift and go to state 12


state 6

    (0) S' -> querylist .



state 7

    (7) aqlquery -> aqlcreatearray .

    SEMICOLON       reduce using rule 7 (aqlquery -> aqlcreatearray .)
    $end            reduce using rule 7 (aqlquery -> aqlcreatearray .)


state 8

    (1) querylist -> aflquery .
    (2) querylist -> aflquery . SEMICOLON
    (3) querylist -> aflquery . SEMICOLON querylist

    $end            reduce using rule 1 (querylist -> aflquery .)
    SEMICOLON       shift and go to state 13


state 9

    (4) querylist -> aqlquery .
    (5) querylist -> aqlquery . SEMICOLON
    (6) querylist -> aqlquery . SEMICOLON querylist

    $end            reduce using rule 4 (querylist -> aqlquery .)
    SEMICOLON       shift and go to state 14


state 10

    (10) aqldroparray -> DROP ARRAY . NAME

    NAME            shift and go to state 15


state 11

    (12) function -> NAME LPAREN . RPAREN
    (13) function -> NAME LPAREN . arguments RPAREN
    (14) arguments -> . expression
    (15) arguments -> . expression COMMA arguments
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MOD expression
    (21) expression -> . expression EQUAL expression
    (22) expression -> . expression LANGLE expression
    (23) expression -> . expression RANGLE expression
    (24) expression -> . expression NEQUAL expression
    (25) expression -> . expression LTEQUAL expression
    (26) expression -> . expression GTEQUAL expression
    (27) expression -> . MINUS expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . function
    (30) expression -> . arrayspec
    (31) expression -> . arrayref
    (32) expression -> . objattribute
    (33) expression -> . NAME
    (34) expression -> . FLOAT
    (35) expression -> . INTEGER
    (36) expression -> . STRING
    (37) expression -> . expression AS NAME
    (12) function -> . NAME LPAREN RPAREN
    (13) function -> . NAME LPAREN arguments RPAREN
    (40) arrayspec -> . LANGLE attrlist RANGLE LBRACKET dimlist RBRACKET
    (38) arrayref -> . NAME ATMARK INTEGER
    (39) objattribute -> . NAME PERIOD NAME

    RPAREN          shift and go to state 20
    MINUS           shift and go to state 17
    LPAREN          shift and go to state 16
    NAME            shift and go to state 27
    FLOAT           shift and go to state 28
    INTEGER         shift and go to state 26
    STRING          shift and go to state 18
    LANGLE          shift and go to state 19

    function                       shift and go to state 23
    objattribute                   shift and go to state 21
    arrayspec                      shift and go to state 24
    arguments                      shift and go to state 22
    arrayref                       shift and go to state 25
    expression                     shift and go to state 29

state 12

    (9) aqlcreatearray -> CREATE ARRAY . NAME arrayspec

    NAME            shift and go to state 30


state 13

    (2) querylist -> aflquery SEMICOLON .
    (3) querylist -> aflquery SEMICOLON . querylist
    (1) querylist -> . aflquery
    (2) querylist -> . aflquery SEMICOLON
    (3) querylist -> . aflquery SEMICOLON querylist
    (4) querylist -> . aqlquery
    (5) querylist -> . aqlquery SEMICOLON
    (6) querylist -> . aqlquery SEMICOLON querylist
    (11) aflquery -> . function
    (7) aqlquery -> . aqlcreatearray
    (8) aqlquery -> . aqldroparray
    (12) function -> . NAME LPAREN RPAREN
    (13) function -> . NAME LPAREN arguments RPAREN
    (9) aqlcreatearray -> . CREATE ARRAY NAME arrayspec
    (10) aqldroparray -> . DROP ARRAY NAME

    $end            reduce using rule 2 (querylist -> aflquery SEMICOLON .)
    NAME            shift and go to state 4
    CREATE          shift and go to state 5
    DROP            shift and go to state 2

    function                       shift and go to state 1
    aqldroparray                   shift and go to state 3
    querylist                      shift and go to state 31
    aqlcreatearray                 shift and go to state 7
    aflquery                       shift and go to state 8
    aqlquery                       shift and go to state 9

state 14

    (5) querylist -> aqlquery SEMICOLON .
    (6) querylist -> aqlquery SEMICOLON . querylist
    (1) querylist -> . aflquery
    (2) querylist -> . aflquery SEMICOLON
    (3) querylist -> . aflquery SEMICOLON querylist
    (4) querylist -> . aqlquery
    (5) querylist -> . aqlquery SEMICOLON
    (6) querylist -> . aqlquery SEMICOLON querylist
    (11) aflquery -> . function
    (7) aqlquery -> . aqlcreatearray
    (8) aqlquery -> . aqldroparray
    (12) function -> . NAME LPAREN RPAREN
    (13) function -> . NAME LPAREN arguments RPAREN
    (9) aqlcreatearray -> . CREATE ARRAY NAME arrayspec
    (10) aqldroparray -> . DROP ARRAY NAME

    $end            reduce using rule 5 (querylist -> aqlquery SEMICOLON .)
    NAME            shift and go to state 4
    CREATE          shift and go to state 5
    DROP            shift and go to state 2

    function                       shift and go to state 1
    aqldroparray                   shift and go to state 3
    querylist                      shift and go to state 32
    aqlcreatearray                 shift and go to state 7
    aflquery                       shift and go to state 8
    aqlquery                       shift and go to state 9

state 15

    (10) aqldroparray -> DROP ARRAY NAME .

    SEMICOLON       reduce using rule 10 (aqldroparray -> DROP ARRAY NAME .)
    $end            reduce using rule 10 (aqldroparray -> DROP ARRAY NAME .)


state 16

    (28) expression -> LPAREN . expression RPAREN
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MOD expression
    (21) expression -> . expression EQUAL expression
    (22) expression -> . expression LANGLE expression
    (23) expression -> . expression RANGLE expression
    (24) expression -> . expression NEQUAL expression
    (25) expression -> . expression LTEQUAL expression
    (26) expression -> . expression GTEQUAL expression
    (27) expression -> . MINUS expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . function
    (30) expression -> . arrayspec
    (31) expression -> . arrayref
    (32) expression -> . objattribute
    (33) expression -> . NAME
    (34) expression -> . FLOAT
    (35) expression -> . INTEGER
    (36) expression -> . STRING
    (37) expression -> . expression AS NAME
    (12) function -> . NAME LPAREN RPAREN
    (13) function -> . NAME LPAREN arguments RPAREN
    (40) arrayspec -> . LANGLE attrlist RANGLE LBRACKET dimlist RBRACKET
    (38) arrayref -> . NAME ATMARK INTEGER
    (39) objattribute -> . NAME PERIOD NAME

    MINUS           shift and go to state 17
    LPAREN          shift and go to state 16
    NAME            shift and go to state 27
    FLOAT           shift and go to state 28
    INTEGER         shift and go to state 26
    STRING          shift and go to state 18
    LANGLE          shift and go to state 19

    function                       shift and go to state 23
    objattribute                   shift and go to state 21
    arrayspec                      shift and go to state 24
    arrayref                       shift and go to state 25
    expression                     shift and go to state 33

state 17

    (27) expression -> MINUS . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MOD expression
    (21) expression -> . expression EQUAL expression
    (22) expression -> . expression LANGLE expression
    (23) expression -> . expression RANGLE expression
    (24) expression -> . expression NEQUAL expression
    (25) expression -> . expression LTEQUAL expression
    (26) expression -> . expression GTEQUAL expression
    (27) expression -> . MINUS expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . function
    (30) expression -> . arrayspec
    (31) expression -> . arrayref
    (32) expression -> . objattribute
    (33) expression -> . NAME
    (34) expression -> . FLOAT
    (35) expression -> . INTEGER
    (36) expression -> . STRING
    (37) expression -> . expression AS NAME
    (12) function -> . NAME LPAREN RPAREN
    (13) function -> . NAME LPAREN arguments RPAREN
    (40) arrayspec -> . LANGLE attrlist RANGLE LBRACKET dimlist RBRACKET
    (38) arrayref -> . NAME ATMARK INTEGER
    (39) objattribute -> . NAME PERIOD NAME

    MINUS           shift and go to state 17
    LPAREN          shift and go to state 16
    NAME            shift and go to state 27
    FLOAT           shift and go to state 28
    INTEGER         shift and go to state 26
    STRING          shift and go to state 18
    LANGLE          shift and go to state 19

    function                       shift and go to state 23
    objattribute                   shift and go to state 21
    arrayspec                      shift and go to state 24
    arrayref                       shift and go to state 25
    expression                     shift and go to state 34

state 18

    (36) expression -> STRING .

    RPAREN          reduce using rule 36 (expression -> STRING .)
    PLUS            reduce using rule 36 (expression -> STRING .)
    MINUS           reduce using rule 36 (expression -> STRING .)
    TIMES           reduce using rule 36 (expression -> STRING .)
    DIVIDE          reduce using rule 36 (expression -> STRING .)
    MOD             reduce using rule 36 (expression -> STRING .)
    EQUAL           reduce using rule 36 (expression -> STRING .)
    LANGLE          reduce using rule 36 (expression -> STRING .)
    RANGLE          reduce using rule 36 (expression -> STRING .)
    NEQUAL          reduce using rule 36 (expression -> STRING .)
    LTEQUAL         reduce using rule 36 (expression -> STRING .)
    GTEQUAL         reduce using rule 36 (expression -> STRING .)
    AS              reduce using rule 36 (expression -> STRING .)
    COMMA           reduce using rule 36 (expression -> STRING .)


state 19

    (40) arrayspec -> LANGLE . attrlist RANGLE LBRACKET dimlist RBRACKET
    (41) attrlist -> . attrspec
    (42) attrlist -> . attrspec COMMA attrlist
    (43) attrspec -> . NAME COLON itemtype

    NAME            shift and go to state 37

    attrlist                       shift and go to state 35
    attrspec                       shift and go to state 36

state 20

    (12) function -> NAME LPAREN RPAREN .

    PLUS            reduce using rule 12 (function -> NAME LPAREN RPAREN .)
    MINUS           reduce using rule 12 (function -> NAME LPAREN RPAREN .)
    TIMES           reduce using rule 12 (function -> NAME LPAREN RPAREN .)
    DIVIDE          reduce using rule 12 (function -> NAME LPAREN RPAREN .)
    MOD             reduce using rule 12 (function -> NAME LPAREN RPAREN .)
    EQUAL           reduce using rule 12 (function -> NAME LPAREN RPAREN .)
    LANGLE          reduce using rule 12 (function -> NAME LPAREN RPAREN .)
    RANGLE          reduce using rule 12 (function -> NAME LPAREN RPAREN .)
    NEQUAL          reduce using rule 12 (function -> NAME LPAREN RPAREN .)
    LTEQUAL         reduce using rule 12 (function -> NAME LPAREN RPAREN .)
    GTEQUAL         reduce using rule 12 (function -> NAME LPAREN RPAREN .)
    AS              reduce using rule 12 (function -> NAME LPAREN RPAREN .)
    COMMA           reduce using rule 12 (function -> NAME LPAREN RPAREN .)
    RPAREN          reduce using rule 12 (function -> NAME LPAREN RPAREN .)
    SEMICOLON       reduce using rule 12 (function -> NAME LPAREN RPAREN .)
    $end            reduce using rule 12 (function -> NAME LPAREN RPAREN .)


state 21

    (32) expression -> objattribute .

    RPAREN          reduce using rule 32 (expression -> objattribute .)
    PLUS            reduce using rule 32 (expression -> objattribute .)
    MINUS           reduce using rule 32 (expression -> objattribute .)
    TIMES           reduce using rule 32 (expression -> objattribute .)
    DIVIDE          reduce using rule 32 (expression -> objattribute .)
    MOD             reduce using rule 32 (expression -> objattribute .)
    EQUAL           reduce using rule 32 (expression -> objattribute .)
    LANGLE          reduce using rule 32 (expression -> objattribute .)
    RANGLE          reduce using rule 32 (expression -> objattribute .)
    NEQUAL          reduce using rule 32 (expression -> objattribute .)
    LTEQUAL         reduce using rule 32 (expression -> objattribute .)
    GTEQUAL         reduce using rule 32 (expression -> objattribute .)
    AS              reduce using rule 32 (expression -> objattribute .)
    COMMA           reduce using rule 32 (expression -> objattribute .)


state 22

    (13) function -> NAME LPAREN arguments . RPAREN

    RPAREN          shift and go to state 38


state 23

    (29) expression -> function .

    RPAREN          reduce using rule 29 (expression -> function .)
    PLUS            reduce using rule 29 (expression -> function .)
    MINUS           reduce using rule 29 (expression -> function .)
    TIMES           reduce using rule 29 (expression -> function .)
    DIVIDE          reduce using rule 29 (expression -> function .)
    MOD             reduce using rule 29 (expression -> function .)
    EQUAL           reduce using rule 29 (expression -> function .)
    LANGLE          reduce using rule 29 (expression -> function .)
    RANGLE          reduce using rule 29 (expression -> function .)
    NEQUAL          reduce using rule 29 (expression -> function .)
    LTEQUAL         reduce using rule 29 (expression -> function .)
    GTEQUAL         reduce using rule 29 (expression -> function .)
    AS              reduce using rule 29 (expression -> function .)
    COMMA           reduce using rule 29 (expression -> function .)


state 24

    (30) expression -> arrayspec .
